# django-app-parameter

./: .coveragerc  .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  QUICK_START_DEV.md  README.md  plan.md  pyproject.toml  tox.ini
.claude/: code_patterns.md  development_guide.md  documentation-guidelines.md  project_overview.md  quick_reference.md  testing_guide.md
.claude/settings/: project.md
.github/: RELEASE.md
.github/workflows/: ci.yml  publish.yml
app_parameter/: models.py
app_parameter/management/commands/: init_param.py
app_parameter/migrations/: 0002_parameter_is_global_alter_parameter_description_and_more.py
demo_project/: README.md  run_demo.sh  setup_demo.sh
demo_project/demo_project/: settings.py  urls.py  validators.py  wsgi.py
demo_project/demo_project/views/: home.py
demo_project/fixtures/: sample_parameters.json
demo_project/templates/: home.html
django_app_parameter/: __init__.py  admin.py  context_processors.py  models.py  utils.py
django_app_parameter/management/commands/: dap_rotate_key.py  dump_param.py  load_param.py
django_app_parameter/migrations/: 0005_parametervalidator.py
docs/: README.md  SETUP_COMPLETE.md  api-reference.md  api.rst  architecture.md  best-practices.md  conf.py  encryption.md  faq.md  index.rst  installation.md  management-commands.md  overview.md  publishing.md  requirements.txt  testing.md  usage-guide.md
tests/: __init__.py  settings.py  test_admin.py  test_admin_views.py  test_context_processors.py  test_django_app_parameter.py  test_dump_param.py  test_encryption.py  test_encryption_without_cryptography.py  test_parameter_history.py  test_rotate_key_command.py  test_utils.py  test_validators.py  test_version_compatibility.py  urls.py
