[tool.poetry]
name = "django-app-parameter"
version = "0.1.0"
description = "App-Parameter is a very simple Django app to save application's parameter in the database."
authors = ["Swann <swann.bouviermuller@gmail.com>"]
maintainers = ["Swann <swann.bouviermuller@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
documentation = ""
keywords = [
    "Django",
    "Parameter",
    "Configuration",
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.2"
loguru = "*"
psutil = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/python-poetry-tutorial/issues"
